@@ -1,12 +1,10 @@
 # -*- cperl -*-
-# $Author$
-# $Date$
-# $Revision$
 
 use ExtUtils::testlib;
-use Test::More tests => 8;
+use Test::More tests => 14;
 use Config::Model;
 use Config::Model::Annotation;
+use File::Path ;
 
 use warnings;
 no warnings qw(once);
@@ -23,6 +21,14 @@ $::verbose          = 1 if $arg =~ /v/;
 $::debug            = 1 if $arg =~ /d/;
 Config::Model::Exception::Any->Trace(1) if $arg =~ /e/;
 
+# pseudo root where config files are written by config-model
+my $wr_root = 'wr_root/';
+
+# cleanup before tests
+rmtree($wr_root);
+mkpath($wr_root, { mode => 0755 }) ;
+
+
 use Log::Log4perl qw(:easy) ;
 Log::Log4perl->easy_init($arg =~ /l/ ? $TRACE: $WARN);
 
@@ -30,6 +36,7 @@ ok(1,"compiled");
 
 my $inst = $model->instance (root_class_name => 'Master', 
 			     model_file => 't/big_model.pm',
+			     root_dir => $wr_root ,
 			     instance_name => 'test1');
 ok($inst,"created dummy instance") ;
 
@@ -53,11 +60,42 @@ foreach (@annotate) {
     ok(1,"set annotation of $l") ;
 }
 
-my $annotate_saver = Config::Model::Annotation->new (instance => $inst) ;
+my $annotate_saver = $inst->annotation_saver ;
 ok($annotate_saver,"created annotation read/write object") ;
+
+my $yaml_dir = $annotate_saver->dir;
+is($yaml_dir,'wr_root/config-model/',"check saved dir") ;
+
+my $yaml_file = $annotate_saver->file;
+is($yaml_file,'wr_root/config-model/Master-note.pl',"check saved file") ;
 
 my $h_ref = $annotate_saver->get_annotation_hash() ;
 
 #use Data::Dumper ; print Dumper ( $h_ref ) ;
 
 is_deeply ($h_ref,\%expect ,"check annotation data") ;
+
+$annotate_saver->save ;
+
+ok(-e $yaml_file,"check yaml file exists" );
+
+
+my $inst2 = $model->instance (root_class_name => 'Master', 
+			      root_dir => $wr_root ,
+			      instance_name => 'test2');
+
+my $root2 = $inst2 -> config_root ;
+
+my $h2_ref = $inst2->annotation_saver->get_annotation_hash() ;
+
+#use Data::Dumper ; print Dumper ( $h_ref ) ;
+my %expect2 = %expect ;
+delete $expect2{'std_id:bc X'} ;
+
+is_deeply ($h2_ref,\%expect2 ,"check loaded annotation data with empty tree") ;
+
+$root2->load( step => $step, permission => 'intermediate' ) ;
+$inst2->annotation_saver->load ;
+
+my $h3_ref = $inst2->annotation_saver->get_annotation_hash() ;
+is_deeply ($h3_ref,\%expect ,"check loaded annotation data with non-empty tree") ;
